# megisholavonat

./: .gitignore  LICENSE  README.md  biome.json  compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: build-and-deploy.yml  main.yaml  prod.yaml
apps/api/: .env  .env.example  .gitignore  Dockerfile  README.md  openapi.json  package.json  pyproject.toml
apps/api/api/: main.py
apps/api/api/core/: config.py  logging_config.py  queries.py  redis.py  taskiq_broker.py
apps/api/api/routers/: posthog.py  redis_test.py  root.py  trains.py
apps/api/api/schemas/: trains.py
apps/api/api/services/: train_service.py
apps/api/api/tasks/: data.py
apps/api/api/util/: county.py  preprocess.py  time.py  vehicle.py
apps/api/scripts/: generate-openapi.py
apps/web/: .env.example  Dockerfile  README.md  biome.json  instrumentation-client.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/.github/workflows/: build-and-push-dev.yaml  build-and-push.yaml
apps/web/messages/: en.json  hu.json
apps/web/public/: changelog-en.md  changelog-hu.md
apps/web/src/: proxy.ts
apps/web/src/app/: global-error.tsx  globals.css  manifest.ts  providers.tsx
apps/web/src/app/[locale]/: MapComponent.tsx  (+3 more)
apps/web/src/clients/: query.ts
apps/web/src/env/: client.ts  server.ts
apps/web/src/hooks/: useGeolocation.ts  useIsMobile.ts  useMapSettings.ts
apps/web/src/i18n/: routing.ts
apps/web/src/lib/: VehicleTracker.ts
apps/web/src/util/: constants.ts  fonts.ts  icon.ts  mapConfigs.ts  polyline.ts  time.ts  vehicle.ts
(+37 files in other folders)
